hphp/hack/test/typecheck/mixed_subtype.php.exp
File "mixed_subtype.php", line 10, characters 7-9:
Class Bar does not correctly implement all required members  (Typing[4110])
File "mixed_subtype.php", line 10, characters 19-21:
Some members are incompatible with those declared in type Foo
Read the following to see why:
File "mixed_subtype.php", line 11, characters 19-19:
Member A has the wrong type
File "mixed_subtype.php", line 5, characters 24-30:
Expected nothing
File "mixed_subtype.php", line 11, characters 24-28:
But got mixed
